node/manifests/node-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-frontend-cnd
spec:
  type: ClusterIP  
  ports:
  - name: "node-frontend-cnd-service"
    port: 9000
  - name: "node-frontend-cnd-hmr-service"
    port: 9001
  selector:
    app: node-frontend-cnd
