node/manifests/node-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: node-cnd
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
spec:
  rules:
  - host: movies.europe.okteto.net
    http:
      paths:
      - path: /api
        backend: 
          serviceName: node-api-cnd
          servicePort: 3000
      - path: /hmr
        backend:
          serviceName: node-frontend-cnd
          servicePort: 9001
      - path: /
        backend:
          serviceName: node-frontend-cnd
          servicePort: 9000
  tls:
  - hosts:
    - movies.europe.okteto.net
    secretName: movies-letsencrypt
